<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.topoffers.topoffers.profile.EditMyProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myprofile_edit_title"
        style="@style/BigPageTitle" />

    <EditText
        android:id="@+id/my_profile_edit_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_first_name"/>

    <EditText
        android:id="@+id/my_profile_edit_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name"/>

    <EditText
        android:id="@+id/my_profile_edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"/>

    <EditText
        android:id="@+id/my_profile_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"/>

    <EditText
        android:id="@+id/my_profile_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>

    <Button
        android:id="@+id/btn_my_profile_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/btn_my_profile_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_profile"
        style="@style/Widget.AppCompat.Button"/>

</LinearLayout>
